syntax = "proto3";

package message_content;

service MessageContentService {
  rpc add (MessageContentAddRequest) returns (MessageContentAddResponse) {}
  rpc get (MessageContentGetRequest) returns (MessageContentGetResponse) {}
  rpc markAsUsed (MessageContentMarkAsUsedRequest) returns (Empty) {}
}

message MessageContentAddRequest {
  string content = 1;
}

message MessageContentAddResponse {
    string accessKey = 1;
}

message MessageContentGetRequest {
  string accessKey = 1;
}

message MessageContentGetResponse {
    string content = 1;
}

message MessageContentMarkAsUsedRequest {
  string accessKey = 1;
}

message Empty {
}